fixes warnings in zenzai branch